Release history for xiate

next
  [Added]
  - Support explicit hyperlinks. This adds the new variable
    "hyperlink_handler" to config.h and REQUIRES you to use VTE 0.50 or
    newer. See config.def.h for more info on that feature.

v17.09  2017-09-16
  [LICENSING]
  - The project has been relicensed under the MIT license (more
    precisely called "Expat License", but everyone calls it "MIT
    license" these days).

v17.02  2017-02-12
  [Fixed]
  - xiatec no longer fails if user parameters contain printf format
    strings (ouch).

  [Added]
  - xiate now hides the cursor and changes the window title when the
    child process exits and "-hold" is used.
  - xiate should cope better with OOM situations. We always try to keep
    the process running in order to *not* kill all your open terminal
    windows.

v16.12  2016-12-24
  [Changed]
  - The deprecated GRegex API is no longer being used by xiate.
  - xiate now expects at least VTE version 0.46.

  [Added]
  - Update geometry hints when changing font or font size.
  - xiate now responds to resize requests of terminal applications.
  - Terminal size (in terms of rows and columns) is being retained on
    changes to fonts or font size.

v16.10  2016-10-29
  [Added]
  - Multiple fonts can be specified and you can switch during runtime.

v16.08  2016-08-20
  [Added]
  - Foreground color of text under the cursor can be customized.

v16.06  2016-06-26
  [Changed]
  - Don't try to reduce flickering by setting the GtkWindow's background
    color anymore. This issue appears to have resolved itself (other VTE
    terminals are fine, too).
  - "internal_border" has been removed from config.h. If you really want
    to use an internal border, put this in your ~/.config/gtk-3.0/gtk.css:

        vte-terminal {
            padding: 30px;
        }

v16.05  2016-05-03
  - Update for slightly new VTE API.

v16.01  2016-01-05
  [Fixed]
  - Properly set X11 window title on the child application's request.