@@ -6,6 +6,11 @@ next
     "hyperlink_handler" to config.h and REQUIRES you to use VTE 0.50 or
     newer. See config.def.h for more info on that feature.
 
+  [Changed]
+  - We use vte_terminal_spawn_async() now, because the _sync() function
+    has been deprecated. This means that you now get a proper error
+    message on STDERR if spawning the main child process failed.
+
 v17.09  2017-09-16
   [LICENSING]
   - The project has been relicensed under the MIT license (more
